# DataMadness31KEN3450

./: DataMadness.ipynb  EDA-local_copy.ipynb  EDA.ipynb  README.md  pyproject.toml  requirements.txt
data/: FeaturesMisdaad.csv  README.md
data/2016/: 83903NED_TypedDataSet_17032023_184931.csv
data/2017/: 83901NED_TypedDataSet_17032023_184849.csv
data/2018/: 84468NED_TypedDataSet_17032023_184739.csv
